fix icon squishing and tooltip position

--- a/static-build/components/ToolTip/styles.css
+++ b/static-build/components/ToolTip/styles.css
@@ -60,14 +60,15 @@
   width: calc(var(--touch-icon-size));
   height: calc(var(--touch-icon-size));
   display: flex;
+  flex: 0 0 auto;
   justify-content: center;
   align-items: center;
   border: 1px solid var(--light-blue);
 }
 
 .toolIcon img {
-  max-width: 80%;
-  max-height: 80%;
+  max-width: 60%;
+  max-height: 60%;
 }
 
 .tooltip {
@@ -139,6 +140,7 @@
   }
 
   &[data-position='right'] {
+    transform: translateX(-316px) translateY(-10px);
     &:after {
       content: '';
       position: absolute;
